[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
mrpiz_bindings = { path = "../mrpiz_bindings" }
log = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }
libc = { workspace = true } 
once_cell = "1.19"
parking_lot = "0.12"